--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.ts",
   "scripts": {
     "dev": "nodemon index.ts",
@@ -33,6 +34,7 @@
     "nodemon": "^2.0.18",
     "prisma": "^4.0.0",
     "ts-node": "^10.8.2",
+    "tsconfig-paths": "^4.1.2",
     "typescript": "^4.8.3"
   }
 }
